# Mandelbrot

./: .gitignore  Cargo.toml  README.md  example.py  pyproject.toml
assets/shaders/: mandelbrot.wgsl  settings.wgsl
python/: example.py
src/: complex.rs  components.rs  cpu.rs  gpu.rs  lib.rs  main.rs  mandelbrot.rs  resources.rs  systems.rs  util.rs
