[package]
name = "mandelbrot"
version = "0.1.0"
edition = "2021"

[lib]
name = "mandelbrot"
crate-type = ["cdylib"]

[dependencies]
image = "0.24.3"
indicatif = "0.17.0"
ndarray = { version = "0.15.6", features = ["rayon"] }
ocl = "0.19.4"
palette = "0.6.1"
pyo3 = { version = "0.16.5", features = ["extension-module"] }
ocl-core = "0.11.3"