[tool.poetry]
authors = ["Freddy Wordingham <f.wordingham@exeter.ac.uk>"]
description = "An example full-stack web-application."
name = "mandelbrot"
version = "0.1.0"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
maturin = "^0.13.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
black = "^22.0.0"
flake8 = "^4.0.1"

[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[project]
name = "mandelbrot"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
